--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "homepage": "https://VenusTokyo.github.io/my-app",
+  "homepage": "https://VenusTokyo.github.io/TextUtils-React-App",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
